package com.flowerbed.api.v1.domain;

import jakarta.persistence.*;
import lombok.AccessLevel;
import lombok.Getter;
import lombok.NoArgsConstructor;
import org.hibernate.annotations.JdbcTypeCode;
import org.hibernate.annotations.SQLDelete;
import org.hibernate.annotations.Where;
import org.hibernate.type.SqlTypes;

import java.time.LocalDate;
import java.time.LocalDateTime;
import java.util.List;

@Entity
@Table(name = "diaries", uniqueConstraints = {
        @UniqueConstraint(name = "uk_user_date", columnNames = {"user_sn", "diary_date"})
})
@Getter
@NoArgsConstructor(access = AccessLevel.PROTECTED)
@SQLDelete(sql = "UPDATE diaries SET deleted_at = NOW() WHERE diary_id = ?")
@Where(clause = "deleted_at IS NULL")
public class Diary extends BaseAuditEntity {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    @Column(name = "diary_id")
    private Long diaryId;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "user_sn", nullable = false, foreignKey = @ForeignKey(name = "diaries_users_user_sn_fk"))
    private User user;

    @Column(name = "diary_date", nullable = false)
    private LocalDate diaryDate;

    @Column(columnDefinition = "TEXT", nullable = false)
    private String content;

    @Column(columnDefinition = "TEXT")
    private String summary;

    @Column(name = "core_emotion_code", length = 20)
    private String coreEmotionCode;

    @Column(name = "emotion_reason", columnDefinition = "TEXT")
    private String emotionReason;

    @Column(name = "flower_name", length = 50)
    private String flowerName;

    @Column(name = "flower_meaning", length = 100)
    private String flowerMeaning;

    @JdbcTypeCode(SqlTypes.JSON)
    @Column(name = "emotions_json", columnDefinition = "LONGTEXT")
    private List<EmotionPercent> emotionsJson;

    @Column(name = "keywords", length = 500)
    private String keywords;

    @Column(name = "is_analyzed", nullable = false)
    private Boolean isAnalyzed = false;

    @Column(name = "analyzed_at")
    private LocalDateTime analyzedAt;

    public Diary(User user, LocalDate diaryDate, String content) {
        this.user = user;
        this.diaryDate = diaryDate;
        this.content = content;
        this.isAnalyzed = false;
    }

    public void updateContent(String content) {
        this.content = content;
        this.isAnalyzed = false;
        this.analyzedAt = null;
    }

    public void updateAnalysis(String summary, String coreEmotionCode,
                               String emotionReason, String flowerName, String flowerMeaning,
                               List<EmotionPercent> emotionsJson, String keywords) {
        this.summary = summary;
        this.coreEmotionCode = coreEmotionCode;
        this.emotionReason = emotionReason;
        this.flowerName = flowerName;
        this.flowerMeaning = flowerMeaning;
        this.emotionsJson = emotionsJson;
        this.keywords = keywords;
        this.isAnalyzed = true;
        this.analyzedAt = LocalDateTime.now();
    }

    /**
     * 감정 퍼센트 내부 클래스 (JSON 저장용)
     * - emotion: 감정 코드
     * - percent: 비율
     * - color: 감정 색상 (HEX 코드)
     * - emotionNameKr: 감정 이름 (한글)
     */
    @Getter
    @NoArgsConstructor(access = AccessLevel.PROTECTED)
    public static class EmotionPercent {
        private String emotion;
        private Integer percent;
        private String color;
        private String emotionNameKr;

        public EmotionPercent(String emotion, Integer percent) {
            this.emotion = emotion;
            this.percent = percent;
        }

        public EmotionPercent(String emotion, Integer percent, String color) {
            this.emotion = emotion;
            this.percent = percent;
            this.color = color;
        }

        public EmotionPercent(String emotion, Integer percent, String color, String emotionNameKr) {
            this.emotion = emotion;
            this.percent = percent;
            this.color = color;
            this.emotionNameKr = emotionNameKr;
        }
    }
}
